packages/lexical-playground/src/index.css
/* ... */
.toolbar select.toolbar-item {
  border: 0;
  display: flex;
  background: none;
  border-radius: 10px;
  padding: 8px;
  vertical-align: middle;
  -webkit-appearance: none;
  -moz-appearance: none;
  width: 70px;
  font-size: 14px;
  color: #777;
  text-overflow: ellipsis;
}

.toolbar select.code-language {
  width: 150px;
}

.toolbar .toolbar-item .text {
  display: flex;
  line-height: 20px;
  vertical-align: middle;
  font-size: 14px;
  color: #777;
  text-overflow: ellipsis;
  overflow: hidden;
  height: 20px;
  text-align: left;
  padding-right: 10px;
}

.toolbar .toolbar-item .icon {
  display: flex;
  width: 20px;
  height: 20px;
  user-select: none;
  margin-right: 8px;
  line-height: 16px;
  background-size: contain;
}

.toolbar i.chevron-down {
  margin-top: 3px;
  width: 16px;
  height: 16px;
  display: flex;
  user-select: none;
}

.toolbar i.chevron-down.inside {
  width: 16px;
  height: 16px;
  display: flex;
  margin-left: -25px;
  margin-top: 11px;
  margin-right: 10px;
  pointer-events: none;
}

.toolbar .divider {
  width: 1px;
  background-color: #eee;
  margin: 0 4px;
}

.sticky-note-container {
  position: absolute;
  z-index: 9;
  width: 120px;
  display: inline-block;
}

.sticky-note {
  line-height: 1;
  text-align: left;
  width: 120px;
  margin: 25px;
  padding: 20px 10px;
  position: relative;
  border: 1px solid #e8e8e8;
  font-family: 'Reenie Beanie';
  font-size: 24px;
  border-bottom-right-radius: 60px 5px;
  display: block;
  cursor: move;
}

.sticky-note:after {
  content: '';
  position: absolute;
  z-index: -1;
  right: -0px;
  bottom: 20px;
  width: 120px;
  height: 25px;
  background: rgba(0, 0, 0, 0.2);
  box-shadow: 2px 15px 5px rgba(0, 0, 0, 0.4);
  transform: matrix(-1, -0.1, 0, 1, 0, 0);
}

.sticky-note.yellow {
  border-top: 1px solid #fdfd86;
  background: linear-gradient(
    135deg,
    #ffff88 81%,
    #ffff88 82%,
    #ffff88 82%,
    #ffffc6 100%
  );
}

.sticky-note.pink {
  border-top: 1px solid #e7d1e4;
  background: linear-gradient(
    135deg,
    #f7cbe8 81%,
    #f7cbe8 82%,
    #f7cbe8 82%,
    #e7bfe1 100%
  );
}

.sticky-note-container.dragging {
  transition: none !important;
}

.sticky-note div {
  cursor: text;
}

.sticky-note .delete {
  border: 0;
  background: none;
  position: absolute;
  top: 8px;
  right: 10px;
  font-size: 10px;
  cursor: pointer;
  opacity: 0.5;
}

.sticky-note .delete:hover {
  font-weight: bold;
  opacity: 1;
}

.sticky-note .color {
  border: 0;
  background: none;
  position: absolute;
  top: 8px;
  right: 25px;
  cursor: pointer;
  opacity: 0.5;
}

.sticky-note .color:hover {
  opacity: 1;
}

.sticky-note .color i {
  display: block;
  width: 12px;
  height: 12px;
  background-size: contain;
}

.PollNode__optionCheckboxChecked {
  background-image: url(images/icons/check-lg.svg);
}

.PollNode__optionDelete {
  background-image: url(images/icons/x-lg.svg);
}

.character-style-popup {
  display: flex;
  margin-bottom: 1px;
  background: #fff;
  padding: 4px;
  vertical-align: middle;
  position: absolute;
  z-index: 10;
  top: -10000px;
  left: -10000px;
  margin-top: -6px;
  opacity: 0;
  background-color: #fff;
  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
  border-radius: 8px;
  transition: opacity 0.5s;
  height: 35px;
}

.character-style-popup button.popup-item {
  border: 0;
  display: flex;
  background: none;
  border-radius: 10px;
  padding: 8px;
  cursor: pointer;
  vertical-align: middle;
}

.character-style-popup button.popup-item:disabled {
  cursor: not-allowed;
}

.character-style-popup button.popup-item.spaced {
  margin-right: 2px;
}

.character-style-popup button.popup-item i.format {
  background-size: contain;
  display: inline-block;
  height: 18px;
  width: 18px;
  margin-top: 2px;
  vertical-align: -0.25em;
  display: flex;
  opacity: 0.6;
}

.character-style-popup button.popup-item:disabled i.format {
  opacity: 0.2;
}

.character-style-popup button.popup-item.active {
  background-color: rgba(223, 232, 250, 0.3);
}

.character-style-popup button.popup-item.active i {
  opacity: 1;
}

.character-style-popup .popup-item:hover:not([disabled]) {
  background-color: #eee;
}

.character-style-popup select.popup-item {
  border: 0;
  display: flex;
  background: none;
  border-radius: 10px;
  padding: 8px;
  vertical-align: middle;
  -webkit-appearance: none;
  -moz-appearance: none;
  width: 70px;
  font-size: 14px;
  color: #777;
  text-overflow: ellipsis;
}

.character-style-popup select.code-language {
  text-transform: capitalize;
  width: 130px;
}

.character-style-popup .popup-item .text {
  display: flex;
  line-height: 20px;
  width: 200px;
  vertical-align: middle;
  font-size: 14px;
  color: #777;
  text-overflow: ellipsis;
  width: 70px;
  overflow: hidden;
  height: 20px;
  text-align: left;
}

.character-style-popup .popup-item .icon {
  display: flex;
  width: 20px;
  height: 20px;
  user-select: none;
  margin-right: 8px;
  line-height: 16px;
  background-size: contain;
}

.character-style-popup i.chevron-down {
  margin-top: 3px;
  width: 16px;
  height: 16px;
  display: flex;
  user-select: none;
}

.character-style-popup i.chevron-down.inside {
  width: 16px;
  height: 16px;
  display: flex;
  margin-left: -25px;
  margin-top: 11px;
  margin-right: 10px;
  pointer-events: none;
}

.character-style-popup .divider {
  width: 1px;
  background-color: #eee;
  margin: 0 4px;
}

.excalidraw-button {
  border: 0;
  padding: 0;
  margin: 0;
  background-color: transparent;
}

.excalidraw-button.selected {
  outline: 2px solid rgb(60, 132, 244);
  user-select: none;
}

.embed-block.focused {
  outline: 2px solid rgb(60, 132, 244);
  user-select: none;
}

.github-corner:hover .octo-arm {
  animation: octocat-wave 560ms ease-in-out;
}
@keyframes octocat-wave {
  0%,
  100% {
    transform: rotate(0);
  }
  20%,
  60% {
    transform: rotate(-25deg);
  }
  40%,
  80% {
    transform: rotate(10deg);
  }
}
/* ... */

